add the linking

--- a/awards/templates/base.html
+++ b/awards/templates/base.html
@@ -5,9 +5,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>The Game of apps</title>
+    <title>EliteAwards</title>
     {%block styles%}
     {%bootstrap_css%}
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{%static 'css/award.css'%}">
     {%endblock%}
   </head>
