--- a/awards/templates/accounts/register.html
+++ b/awards/templates/accounts/register.html
@@ -1,21 +1,33 @@
-{%extends "registration/base.html"%}
+{%extends "accounts/base.html"%}
 {% load bootstrap4 %}
 {% load static %}
 {% block content %}
+<style>
+    body {
+        background-image: url("https://images.unsplash.com/photo-1573820841182-8c43b3bf0a77?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+        background-repeat: no-repeat;
+        /* background-position-y: center; */
+        background-size: cover;
+        border-radius: 100px;
+        
+  
+    }
+    
+  </style>
 <div class="container">
     <div class="row">
         <!-- Empty div -->
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
+        <div class="col-md-4" ></div>
+        <div class="col-md-4" style="margin-top:200px; margin-left: 400px; background-color:bisque; "  >
             {% if form.errors %}
             <p> Some Information Might be Incorrect </p>
             {% endif %}
 
             
-            <div class="panel panel-default">
+            <div class="panel panel-default" style= "background-color:bisque;" >
 
-                <div class="panel-heading">
-                    <h3 class="text-center" href="/accounts/login/?next=/">Sign Up</h3>
+                <div class="panel-heading" style= "background-color:bisque">
+                    <h3 class="text-center"  href="/accounts/login/?next=/">Sign Up</h3>
                 </div>
                 <div class="panel-body">
 
