--- a/awards/templates/profile.html
+++ b/awards/templates/profile.html
@@ -1,65 +1,48 @@
-{%extends 'base.html'%}
-{%load bootstrap4%}
-
-{%block content%}
-<!-- My Modals -->
-<div class="modal fade" id="updateForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Update you profile.</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form class="form-group" action="{% url 'profile' %}" method="post">
-        {% csrf_token %}
-        {% bootstrap_form prof_update %}
-        <input class="btn btn-outline-success" type="submit" name="" value="Update">
-      </form>
-    </div>
-  </div>
-</div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-5 col-sm-5 mt-3">
-      {%if current_user.profile.avi%}
-      
-      <img class="rounded-circle"src="{{profile.profile_photo.url}}" alt="profile avi" height="200" width="200">
-      {%else%}
-      <img class="rounded-circle"src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="profile avi" height="200" width="200">
-      {%endif%}
-    </div>
-    <div class="col-md-7 col-sm-7 mt-3">
-      <p><b>{{current_user.username}}</b></p>
-      {%if current_user.profile.bio%}
-      <blockquote>
-        - {{current_user.profile.bio}}
-      </blockquote>
-      {%else%}
-      <p>No Bio, <a data-toggle="modal" data-target="#updateForm">Update?</a></p>
-      {%endif%}
-      <button class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#updateForm">Update profile</button>
-    </div>
-  </div>
-  <hr>
-  <div class="container">
-  <h3 class="text-center">Your Posts</h3>
-  {%for user_post in user_posts%}
-    <div class="row">
-      <div class="card m-4" style="width: 18rem;">
-        <a href="#"><img class="card-img-top" src="{{user_post.landing.cdn_url}}" alt="user post landing page"></a>
-        <div class="card-body">
-          <h5 class="card-title">{{user_post.title}}</h5>
-          <p class="card-text">Upload by <b>{{user_post.user.username}}</b></p>
-          <a href="{{user_post.live_site}}" class="btn btn-primary">Visit Site</a>
+{% extends '/home/elly/Core/Awards/awards/templates/base.html' %}
+{% block content %}
+<div class="container" style="margin-top:20px;"">
+    <div class="row ">
+        <div class="col-sm-6 col-md-4">
+            
+            <h5 class="user">{{profile.user.username}}</h5>
+            <img src="{{profile.profile_photo.url}}" class="img-thumbnail img-responsive img-fluid" alt="" 
+             style="border-radius: 50%; width:100px; height:100px; border-color: brown; border-width: 1.5px;">
         </div>
-      </div>
+        <div class="col-sm-6 col-md-6">
+            <hr>
+            <p>{{profile.bio}}</p>
+           
+        </div>
+        
+        <!-- Edit Profile section -->
+        <div class="col-sm-6 col-md-2">
+                <a href="{%url 'edit_profile'%}" class="btn btn-outline-info btn-sm">Edit Profile</a>
+        </div>
     </div>
-    {%endfor%}
-  </div>
+
+    </div>
+    <div class="row" style="margin-top:30px;">
+        <div class="row">
+            <h3 class="text-center" style="margin-left:500px;">Projects</h3>
+        </div>
+        <!-- Card deck -->
+        <div class="card-deck">
+            {% for single_project in projects %}
+            <!-- Card -->
+            <div class="col-md-4">
+                <div class="card mb-3">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img class="card-img-top" src="{{single_project.image.url}}" alt="{{single_project.title}}">
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <!-- Card deck -->
+
+    </div>
 </div>
-{%endblock%}
+
+{% endblock %}
