--- a/awards/templates/base.html
+++ b/awards/templates/base.html
@@ -9,6 +9,10 @@
     {%block styles%}
     {%bootstrap_css%}
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sail&family=Vast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Sail&family=Vast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Goblin+One&family=Sail&family=Vast+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{%static 'css/award.css'%}">
     {%endblock%}
   </head>
