--- a/awards/templates/proj_details.html
+++ b/awards/templates/proj_details.html
@@ -1,8 +1,8 @@
-{%extends 'base.html'%}
+<!-- {%extends 'base.html'%}
 {%load bootstrap4%}
 
 {%block content%}
-<!-- review Modal -->
+<!-- review Modal 
 <div class="modal fade" id="reviewForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog" role="document">
   <div class="modal-content" style= "background-color:bisque;">
@@ -75,4 +75,4 @@
     </div>
   </div>
 </div>
-{%endblock%}
+{%endblock%} -->
