--- a/awards/templates/accounts/logout.html
+++ b/awards/templates/accounts/logout.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="container ">
+<div class="container" style="padding-top: 100px;">
     <div class="content-section">
         <h2>You have been successfully logged out</h2>
         <div class="border-top pt-3">
