--- a/awards/templates/details.html
+++ b/awards/templates/details.html
@@ -13,7 +13,8 @@
       </button>
     </div>
     <div class="modal-body">
-      <form class="form-group" action="{% url 'details' current_site.id%}" method="post">
+      <form enctype='multipart/form-data' class="form-group" action="{% url 'details' current_site.id%}" method="POST">
+  
         {% csrf_token %}
         {%bootstrap_form review_form%}
         <input class="btn btn-outline-success" type="submit" name="" value="Upload">
@@ -24,7 +25,7 @@
 </div>
 
 <h1 class="text-center"><b>{{current_site.title}}</b></h1>
-<img class="d-block w-100" src="{{current_site.landing.cdn_url}}" alt="First slide" height="600">
+<img class="d-block w-100" src="{{current_site.image.url}}" alt="First slide" height="400">
 <div class="text-center mt-3">
   <h5><i>{{current_site.description}}</i></h5>
   <div class="container">
@@ -33,7 +34,7 @@
 
       </div>
       <div class="col-md-4">
-        <a href="{{current_site.live_site}}"><button class="btn btn-outline-danger" name="button">Visit site</button></a>
+        <a href="{{current_site.live_site}}"><button class="btn btn-outline-warning" name="button">Visit site</button></a>
         <button data-toggle="modal" data-target="#reviewForm" class="btn btn-outline-info mt-2" name="button">Leave a review?</button>
       </div>
       <div class="col-md-4">
