--- a/awards/templates/index.html
+++ b/awards/templates/index.html
@@ -6,13 +6,15 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Post an image</h5>
+      <h5 class="modal-title" id="exampleModalLabel" style="font-family: 'Emblema One', cursive;
+      font-family: 'Sail', cursive;
+      font-family: 'Vast Shadow', cursive;">Post an image</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
-      <form class="form-group" action="{% url 'homepage' %}" method="post">
+      <form enctype='multipart/form-data' method="POST">
         {% csrf_token %}
         {%bootstrap_form proj_upload%}
         <input class="btn btn-outline-success" type="submit" name="" value="Upload">
@@ -63,9 +65,10 @@
   <div class="row">
     {%for project in projects %}
       <div class="card m-4" style="width: 18rem;">
-        <a href="{% url 'details' project.id %}"><img class="card-img-top" src="{{project.image.cdn_url}}" alt="Card image cap"></a>
-        <div class="card-body">
-          <h5 class="card-title">{{project.title}}</h5>
+        <a href="{% url 'details' project.id %}"><img class="card-img-top" src="{{project.image.url}}" alt="Card image cap"></a>
+        <div class="card-body" style='background-color: rgb(205, 213, 255);' >
+          <h5 class="card-title" style="font-family: 'Sail', cursive;
+          font-family: 'Vast Shadow', cursive;">{{project.title}}</h5>
           <p class="card-text">Upload by <b>{{project.user.username}}</b></p>
           <a href="{{project.live_site}}" target="_blank" class="btn btn-primary">Visit Site</a>
         </div>
