--- a/awards/templates/search.html
+++ b/awards/templates/search.html
@@ -1,36 +1,37 @@
 {% extends 'base.html' %}
 
+{% block content %}
 <style>
     body {
-        background-image: url("https://images.unsplash.com/photo-1593331306639-9f806b073b2e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
+        background-image: url("https://images.unsplash.com/photo-1493723843671-1d655e66ac1c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
         background-repeat: no-repeat;
         background-size: cover;
+        background-position-y: center;
+        
+  
     }
-</style>
+    
+  </style>
+<div class="container" style="font-family: 'Vast Shadow', cursive; padding-top: 60px;">
 
-{%  block content %}
-{% if users %}
+  <div class="row">
+    {% if projects %}
+      <h2>Found {{ projects|length }} of searched term {{message}}</h2>
+    {% else %}
+      <h2> Found 0 projects for the search term {{message}}</h2>
+    {% endif %}
 
-    {% for user in users %}
-    <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4">
-            <div class="card" style="width: 25rem;">
-                <span>
-                    <img src="{{user.profile.profile_photo.url}}" alt=""
-                        style="border-radius: 50%; width:30px; height:30px; border-color: brown; border-width: 1px;">
-                </span>
-                <hr>
-                <span>{{user.profile.bio}}</span>
-            </div>
-        </div>
-        <div class="col-sm-4"></div>
-    </div>
+  </div>
+
+  <div class="row">
+
+  {% if projects %}
+    {% for project in projects %}
+      <div class="col-sm-6 col-md-3">
+          <h1>{{project.title}}</h1>
+      </div>
     {% endfor %}
-
-{% else %}
-
-<p class="text-center">search results no matches</p>
-{% endif %}
-
+  {% endif %}
+  </div>
+</div>
 {% endblock %}
